--- a/groq.ipynb
+++ b/groq.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
-    "    groq_api_key='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',\n",
+    "    groq_api_key='you should enter your groq key',\n",
     "    model_name=\"llama-3.3-70b-versatile\"\n",
     ")\n",
     "response = llm.invoke(\"The first person to land on the moon was ...\")\n",
