--- a/email_generator.ipynb
+++ b/email_generator.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
-    "    groq_api_key='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',\n",
+    "    groq_api_key='groq key should be wntered over here',\n",
     "    model_name=\"llama-3.3-70b-versatile\"\n",
     ")\n",
     "response=llm.invoke(\"The first person to land on moon was..\")\n",
